--- a/views/partials/mainMenu.hbs
+++ b/views/partials/mainMenu.hbs
@@ -1,3 +1,3 @@
 <div class="menu">
-    <a href="http://localhost:3000/add"><button>Добавить</button></a>
+    <a href="/add"><button>Добавить</button></a>
 </div>
