--- a/views/partials/addMenu.hbs
+++ b/views/partials/addMenu.hbs
@@ -18,7 +18,7 @@
         let name = document.getElementById('name').value;
         let number = document.getElementById('number').value;
 
-        if(name === "" || number === "" || isNaN(name)){
+        if(name === "" || number === ""){
             document.getElementById('BTNsubm').disabled = true;
             document.getElementById('BTNsubm').style.opacity = 0.5;
         } else {
